// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WalletVote should render 1`] = `
<DocumentFragment>
  <section
    data-testid="WalletVote"
  >
    <div
      class="flex items-center justify-between"
    >
      <h2
        class="font-bold"
      >
        My Vote
      </h2>
      <button
        class="flex items-center px-4 py-2 font-semibold rounded focus:outline-none focus:shadow-outline space-x-2 -mr-4 text-theme-neutral"
        data-testid="WalletVote__toggle"
      >
        <span>
          Hide
        </span>
        <span
          class="sc-AxhUy icixlS"
        >
          <div
            class="sc-AxhCb idmnCf"
            height="10"
            width="10"
          >
            <svg>
              chevron-down.svg
            </svg>
          </div>
        </span>
      </button>
    </div>
    <div
      aria-hidden="false"
      data-testid="Collapse"
      style="max-height: auto; height: auto; opacity: 1; overflow: auto;"
    >
      <div
        class="grid grid-flow-row row-gap-6 py-4"
      >
        <div
          class="flex items-center justify-between"
          data-testid="WalletVote__delegate"
        >
          <div
            class="flex items-center space-x-4"
          >
            <div
              class="flex items-center -space-x-2"
            >
              <div
                class="sc-AxiKw jQtkkF border-theme-neutral-900 text-theme-neutral-900"
              >
                <div
                  class="sc-AxhCb fxrKLH"
                  height="1em"
                  width="1em"
                >
                  <svg>
                    voted.svg
                  </svg>
                </div>
              </div>
              <div
                class="Avatar__AvatarWrapper-sc-1vsy2s2-0 fGjnTn"
                data-testid="Avatar"
              >
                <div
                  class="w-full h-full"
                >
                  <img
                    alt="AXzxJ8Ts3dQ2bvBR1tPE7GUee9iSEJb8HX"
                    src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(255, 193, 7)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"35\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(33, 150, 243)\\"/><circle r=\\"50\\" cx=\\"60\\" cy=\\"40\\" fill=\\"rgb(3, 169, 244)\\"/><circle r=\\"60\\" cx=\\"90\\" cy=\\"60\\" fill=\\"rgb(139, 195, 74)\\"/></svg>"
                    title="AXzxJ8Ts3dQ2bvBR1tPE7GUee9iSEJb8HX"
                  />
                </div>
              </div>
            </div>
            <div
              class="flex flex-col justify-between"
            >
              <span
                class="text-sm font-semibold text-theme-neutral"
              >
                Delegate
              </span>
              <div
                class="inline-block truncate align-middle"
              >
                <span
                  class="text-theme-text max-w-24 flex-auto truncate mt-4 mr-1 font-semibold text-base"
                  data-testid="address__wallet-name"
                >
                  arkx
                </span>
                <span
                  class="sc-AxjAm StDqN text-theme-neutral-light font-semibold text-base"
                  data-testid="address__wallet-address"
                >
                  AXzxJ8…EJb8HX
                </span>
              </div>
            </div>
          </div>
          <div
            class="flex items-center"
          >
            <ul
              class="flex items-stretch divide-x-1 divide-theme-neutral-300"
            >
              <li
                class="flex flex-col items-center justify-between px-10"
              >
                <span
                  class="text-sm font-semibold text-theme-neutral"
                >
                  Rank
                </span>
                <span
                  class="font-bold text-theme-neutral-dark"
                  data-testid="WalletVote__delegate__rank"
                >
                  #
                </span>
              </li>
              <li
                class="flex flex-col items-center justify-between px-10"
              >
                <span
                  class="text-sm font-semibold text-theme-neutral"
                >
                  Explorer
                </span>
                <a
                  data-testid="WalletVote__delegate__explorer"
                  href="https://explorer.ark.io"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  <div
                    class="sc-AxhCb fxrKLH text-2xl text-theme-primary"
                    height="1em"
                    width="1em"
                  >
                    <svg>
                      explorer.svg
                    </svg>
                  </div>
                </a>
              </li>
              <li
                class="flex flex-col items-center justify-between px-10"
              >
                <span
                  class="text-sm font-semibold text-theme-neutral"
                >
                  MarketSquare
                </span>
                <a
                  data-testid="WalletVote__delegate__msq"
                  href="https://marketsquare.io"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  <div
                    class="sc-AxhCb fxrKLH text-xl text-theme-primary"
                    height="1em"
                    width="1em"
                  >
                    <svg>
                      link.svg
                    </svg>
                  </div>
                </a>
              </li>
              <li
                class="flex flex-col items-center justify-between px-10"
              >
                <span
                  class="text-sm font-semibold text-theme-neutral"
                >
                  Status
                </span>
                <div
                  class="sc-AxhCb fxrKLH text-theme-neutral"
                  height="1em"
                  width="1em"
                >
                  <svg>
                    status-clock.svg
                  </svg>
                </div>
              </li>
            </ul>
            <button
              class="sc-AxirZ fhzkRl"
              color="primary"
              data-testid="WalletVote__delegate__unvote"
              type="button"
            >
              Unvote
            </button>
          </div>
        </div>
        <div
          class="flex items-center justify-between"
          data-testid="WalletVote__delegate"
        >
          <div
            class="flex items-center space-x-4"
          >
            <div
              class="flex items-center -space-x-2"
            >
              <div
                class="sc-AxiKw jQtkkF border-theme-neutral-900 text-theme-neutral-900"
              >
                <div
                  class="sc-AxhCb fxrKLH"
                  height="1em"
                  width="1em"
                >
                  <svg>
                    voted.svg
                  </svg>
                </div>
              </div>
              <div
                class="Avatar__AvatarWrapper-sc-1vsy2s2-0 fGjnTn"
                data-testid="Avatar"
              >
                <div
                  class="w-full h-full"
                >
                  <img
                    alt="AHJJ29sCdR5UNZjdz3BYeDpvvkZCGBjde9"
                    src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(3, 169, 244)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"10\\" cy=\\"60\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"20\\" cy=\\"50\\" fill=\\"rgb(244, 67, 54)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"40\\" fill=\\"rgb(255, 193, 7)\\"/></svg>"
                    title="AHJJ29sCdR5UNZjdz3BYeDpvvkZCGBjde9"
                  />
                </div>
              </div>
            </div>
            <div
              class="flex flex-col justify-between"
            >
              <span
                class="text-sm font-semibold text-theme-neutral"
              >
                Delegate
              </span>
              <div
                class="inline-block truncate align-middle"
              >
                <span
                  class="text-theme-text max-w-24 flex-auto truncate mt-4 mr-1 font-semibold text-base"
                  data-testid="address__wallet-name"
                >
                  genesis_42
                </span>
                <span
                  class="sc-AxjAm StDqN text-theme-neutral-light font-semibold text-base"
                  data-testid="address__wallet-address"
                >
                  AHJJ29…GBjde9
                </span>
              </div>
            </div>
          </div>
          <div
            class="flex items-center"
          >
            <ul
              class="flex items-stretch divide-x-1 divide-theme-neutral-300"
            >
              <li
                class="flex flex-col items-center justify-between px-10"
              >
                <span
                  class="text-sm font-semibold text-theme-neutral"
                >
                  Rank
                </span>
                <span
                  class="font-bold text-theme-neutral-dark"
                  data-testid="WalletVote__delegate__rank"
                >
                  #2
                </span>
              </li>
              <li
                class="flex flex-col items-center justify-between px-10"
              >
                <span
                  class="text-sm font-semibold text-theme-neutral"
                >
                  Explorer
                </span>
                <a
                  data-testid="WalletVote__delegate__explorer"
                  href="https://explorer.ark.io"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  <div
                    class="sc-AxhCb fxrKLH text-2xl text-theme-primary"
                    height="1em"
                    width="1em"
                  >
                    <svg>
                      explorer.svg
                    </svg>
                  </div>
                </a>
              </li>
              <li
                class="flex flex-col items-center justify-between px-10"
              >
                <span
                  class="text-sm font-semibold text-theme-neutral"
                >
                  MarketSquare
                </span>
                <a
                  data-testid="WalletVote__delegate__msq"
                  href="https://marketsquare.io"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  <div
                    class="sc-AxhCb fxrKLH text-xl text-theme-primary"
                    height="1em"
                    width="1em"
                  >
                    <svg>
                      link.svg
                    </svg>
                  </div>
                </a>
              </li>
              <li
                class="flex flex-col items-center justify-between px-10"
              >
                <span
                  class="text-sm font-semibold text-theme-neutral"
                >
                  Status
                </span>
                <div
                  class="sc-AxhCb fxrKLH text-theme-success"
                  height="1em"
                  width="1em"
                >
                  <svg>
                    ok.svg
                  </svg>
                </div>
              </li>
            </ul>
            <button
              class="sc-AxirZ fhzkRl"
              color="primary"
              data-testid="WalletVote__delegate__unvote"
              type="button"
            >
              Unvote
            </button>
          </div>
        </div>
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`WalletVote should render without votes 1`] = `
<DocumentFragment>
  <section
    data-testid="WalletVote"
  >
    <div
      class="flex items-center justify-between"
    >
      <h2
        class="font-bold"
      >
        My Vote
      </h2>
      <button
        class="flex items-center px-4 py-2 font-semibold rounded focus:outline-none focus:shadow-outline space-x-2 -mr-4 text-theme-neutral"
        data-testid="WalletVote__toggle"
      >
        <span>
          Hide
        </span>
        <span
          class="sc-AxhUy icixlS"
        >
          <div
            class="sc-AxhCb idmnCf"
            height="10"
            width="10"
          >
            <svg>
              chevron-down.svg
            </svg>
          </div>
        </span>
      </button>
    </div>
    <div
      aria-hidden="false"
      data-testid="Collapse"
      style="max-height: auto; height: auto; opacity: 1; overflow: auto;"
    >
      <div
        class="grid grid-flow-row row-gap-6 py-4"
      >
        <div
          class="flex items-center justify-between"
          data-testid="WalletVote__empty"
        >
          <div
            class="flex items-center pr-8 space-x-4"
          >
            <div
              class="flex items-center -space-x-2"
            >
              <div
                class="sc-AxiKw jQtkkF text-theme-neutral-light"
              >
                <div
                  class="sc-AxhCb fxrKLH"
                  height="1em"
                  width="1em"
                >
                  <svg>
                    voted.svg
                  </svg>
                </div>
              </div>
              <div
                class="sc-AxiKw jQtkkF bg-theme-background"
              />
            </div>
            <div
              class="flex flex-col"
            >
              <span
                class="text-sm font-semibold text-theme-neutral"
              >
                Address Delegate
              </span>
              <div
                class="font-semibold text-theme-neutral-900"
              >
                <span
                  class="mr-2"
                >
                  You haven't voted for more than one delegate yet.
                </span>
                <a
                  class="sc-AxgMl fZdMHS inline-flex items-center font-semibold cursor-pointer transition-colors duration-200 text-theme-primary hover:text-theme-primary-dark hover:underline active:text-theme-primary-500"
                  data-testid="Link"
                  rel="noopener noreferrer"
                  to="https://guides.ark.dev/usage-guides/desktop-wallet-voting"
                >
                  Learn more
                  <div
                    class="sc-AxhCb fxrKLH flex-shrink-0 ml-2 text-sm"
                    data-testid="Link__external"
                    height="1em"
                    width="1em"
                  >
                    <svg>
                      redirect.svg
                    </svg>
                  </div>
                </a>
              </div>
            </div>
          </div>
          <button
            class="sc-AxirZ fhzkRl"
            color="primary"
            data-testid="WalletVote__delegate__vote"
            type="button"
          >
            Vote
          </button>
        </div>
      </div>
    </div>
  </section>
</DocumentFragment>
`;
